--- a/main.html
+++ b/main.html
@@ -4,10 +4,51 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
+	 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
+  <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.3/dist/jquery.slim.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
+	<style>
+		
+		.card1{
+			color:white;
+		}
+	</style>
 </head>
 
 <body>
 	<!-- the entire body must be written by student -->
+	<p class="h1">Welcome to Sync5</p>
+	<div class="card ">
+  <div class="card-header">
+   New Features
+  </div>
+  <div class="card-body">
+    <h5 class="card-title">Mobile and Tablet support</h5>
+    <p class="card-text">With this new update you will be able to sync your work across large number of platforms.</p>
+    <a href="#" class="btn btn-primary">Read more</a>
+  </div>
+</div>
+	<div class="card-deck">
+  <div class="card  bg-danger card1">
+    <div class="card-body">
+	  <div class="card-header">Alert</div>
+      <h5 class="card-title">Node Dead</h5>
+      <p class="card-text">Node 5 (east-us) is offline for last 12 days.</p>
+    </div>
+  </div>
+  <div class="card">
+    <img class="card-img-top" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQw6Fjc3gGH_5iW5yXru0UIdvp2dcj-jUmv0A&usqp=CAU" alt="Card image cap">
+    <div class="card-body">
+      <h5 class="card-title">President under Pressure</h5>
+      <p class="card-text">The US president is under pressure to respond to a widespread cyber-attack linked to China.</p>
+    </div>
+    <div class="card-footer">
+      <small class="text-muted">Last updated 12 mins ago</small>
+    </div>
+  </div>
+</div>
+</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
